--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                 <div class="restaurants__container">
                     <h2 class="restaurants__heading">Restaurants</h2>
                     <div class="restaurants__cards">
-                        <section class="restaurants__card">
-                            <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
-                            <div class="restaurants__label-new">Nouveau</div>
-                            <div class="restaurants__card-content">
-                                <div class="restaurants__card-text">
-                                    <h3 class="restaurants__card-heading">La palette du goût</h3>
-                                    <p class="restaurants__card-paragraph">Ménilmontant</p>
+                        <a class="restaurants__card" href="restaurants/page_1.html">
+                                <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                                <div class="restaurants__label-new">Nouveau</div>
+                                <div class="restaurants__card-content">
+                                    <div class="restaurants__card-text">
+                                        <h3 class="restaurants__card-heading">La palette du goût</h3>
+                                        <p class="restaurants__card-paragraph">Ménilmontant</p>
+                                    </div>
+                                    <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                    <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 </div>
-                                <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
-                            </div>
-                        </section>
-                        <section class="restaurants__card">
+                        </a>                       
+                        <a class="restaurants__card" href="restaurants/page_2.html">
                             <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
                             <div class="restaurants__label-new">Nouveau</div>
                             <div class="restaurants__card-content">
@@ -89,32 +89,29 @@
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
                                 <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                             </div>
-                        </section>
-                        <section class="restaurants__card">
-                            <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
-                            <div class="restaurants__card-content">
-                                <div class="restaurants__card-text">
-                                    <h3 class="restaurants__card-heading">à la française</h3>
-                                    <p class="restaurants__card-paragraph">Cité Rouge</p>
+                        </a>                   
+                        <a class="restaurants__card" href="restaurants/page_3.html">
+                                <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                                <div class="restaurants__card-content">
+                                    <div class="restaurants__card-text">
+                                        <h3 class="restaurants__card-heading">à la française</h3>
+                                        <p class="restaurants__card-paragraph">Cité Rouge</p>
+                                    </div>
+                                    <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                    <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 </div>
-                                <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
-                            </div>
-                        </section>
-                        <section class="restaurants__card">
-                            <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
-                            <div class="restaurants__card-content">
-                                <div class="restaurants__card-text">
-                                    <h3 class="restaurants__card-heading">Le délice des sens</h3>
-                                    <p class="restaurants__card-paragraph">Folie-Méricourt</p>
+                        </a>
+                        <a class="restaurants__card" href="restaurants/page_4.html">
+                                <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                                <div class="restaurants__card-content">
+                                    <div class="restaurants__card-text">
+                                        <h3 class="restaurants__card-heading">Le délice des sens</h3>
+                                        <p class="restaurants__card-paragraph">Folie-Méricourt</p>
+                                    </div>
+                                    <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                    <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 </div>
-                                <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
-                                <!-- <span class="restaurants__border fa-regular fa-heart"></span> -->
-
-                            </div>
-                        </section>
-                    
+                        </a>                    
                     </div>
                 </div>
             </article>
