--- a/restaurants/page_1.html
+++ b/restaurants/page_1.html
@@ -31,44 +31,120 @@
                                                 <!-- MENU -->
                 
             <article class="menu">
+                <h1 class="menu__heading">La Palette du goût
+                <span class="menu__heart-icon-border fa-regular fa-heart"></span>
+                <span class="menu__heart-icon-solid fa-solid fa-heart"></span>
+                </h1>
                 <div class="menu__container">
-                    <h1 class="menu__heading">La Palette du goût
-                    <span class="menu__heart-icon-border fa-regular fa-heart"></span>
-                    <span class="menu__heart-icon-solid fa-solid fa-heart"></span>
-                    </h1>
                                             <!-- appetizer -->                                       
-                    <section class="menu__appetizer">   
-                        <h2 class="menu__heading">entrées</h2>  
+                    <section class="menu__dishes menu__dishes--1">   
+                        <h2 class="menu__heading reveal-text--1">entrées</h2>  
                         <div class="menu__cards">
                             <div class="menu__card">
-                                <div class="menu__card-text">
+                                <div class="menu__card-text reveal-text--1">
                                     <h3 class="menu__card-heading">Foie gras de canard mi-cuit</h3>
                                     <p class="menu__card-paragraph">Au piment d'Espelette</p>
                                 </div> 
-                                <div class="menu__price">25€</div> 
-                                <div class="menu__slide">
+                                <div class="menu__price reveal-text--1">25€</div> 
+                                <div class="menu__slide reveal-text--1333">
                                     <span class="menu__circle fa-solid fa-circle "></span>
                                     <span class="menu__check fa-solid fa-check "></span>
                                 </div>  
                             </div>
                             <div class="menu__card">
-                                <div class="menu__card-text">
+                                <div class="menu__card-text reveal-text--1">
                                     <h3 class="menu__card-heading">Fricassée d'escargots</h3>
                                     <p class="menu__card-paragraph">Et ses copeaux de truffe noire</p>
                                 </div>  
-                                <div class="menu__price">35€</div>
-                                <div class="menu__slide">
+                                <div class="menu__price reveal-text--1">35€</div>
+                                <div class="menu__slide reveal-text--1">
                                     <span class="menu__circle fa-solid fa-circle "></span>
                                     <span class="menu__check fa-solid fa-check "></span>
                                 </div>   
                             </div>
                             <div class="menu__card">
-                                <div class="menu__card-text">
+                                <div class="menu__card-text reveal-text--1">
                                     <h3 class="menu__card-heading">Œuf au plat</h3>
                                     <p class="menu__card-paragraph">Assaisonné à la truffe sur lit de caviar</p>
                                 </div> 
-                                <div class="menu__price">20€</div>
-                                <div class="menu__slide">
+                                <div class="menu__price reveal-text--1">20€</div>
+                                <div class="menu__slide reveal-text--1">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>    
+                            </div>
+                        </div>
+                    </section>
+                    <section class="menu__dishes menu__dishes--2">  
+                        <h2 class="menu__heading reveal-text--2">plats</h2>  
+                        <div class="menu__cards">
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--2">
+                                    <h3 class="menu__card-heading">Filet de bœuf aux herbes</h3>
+                                    <p class="menu__card-paragraph">Accompagné de sa ribambelle de légumes</p>
+                                </div> 
+                                <div class="menu__price reveal-text--2">40€</div> 
+                                <div class="menu__slide reveal-text--2">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>  
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--2">
+                                    <h3 class="menu__card-heading">Parmentier de queue de bœuf</h3>
+                                    <p class="menu__card-paragraph">À la truffe noire sur sa purée de panais</p>
+                                </div>  
+                                <div class="menu__price reveal-text--2">35€</div>
+                                <div class="menu__slide reveal-text--2">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>   
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--2">
+                                    <h3 class="menu__card-heading">Filet de turbot</h3>
+                                    <p class="menu__card-paragraph">Aux agrumes</p>
+                                </div> 
+                                <div class="menu__price reveal-text--2">40€</div>
+                                <div class="menu__slide reveal-text--2">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>    
+                            </div>
+                        </div>
+                    </section>
+                    <section class="menu__dishes menu__dishes--3">  
+                        <h2 class="menu__heading">dessert</h2>  
+                        <div class="menu__cards">
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--3">
+                                    <h3 class="menu__card-heading">Paris-Brest</h3>
+                                    <p class="menu__card-paragraph">Revisité</p>
+                                </div> 
+                                <div class="menu__price reveal-text--3">18€</div> 
+                                <div class="menu__slide reveal-text--3">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>  
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--3">
+                                    <h3 class="menu__card-heading">Macaron au chocolat d'exception</h3>
+                                    <p class="menu__card-paragraph">Et glace à la vanille de Madagascar</p>
+                                </div>  
+                                <div class="menu__price reveal-text--3">22€</div>
+                                <div class="menu__slide reveal-text--3">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>   
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--3">
+                                    <h3 class="menu__card-heading">Mousse au chocolat </h3>
+                                    <p class="menu__card-paragraph">Au piment d'Espelette et à la truffe noire</p>
+                                </div> 
+                                <div class="menu__price reveal-text--3">23€</div>
+                                <div class="menu__slide reveal-text--3">
                                     <span class="menu__circle fa-solid fa-circle "></span>
                                     <span class="menu__check fa-solid fa-check "></span>
                                 </div>    
